--- a/src/scss/block/grid-left.scss
+++ b/src/scss/block/grid-left.scss
@@ -15,6 +15,7 @@
         align-items: center;
         height: auto;
         width: 100%;
+        margin-bottom: 10%;
         //@include outline;
 
     }
